[gd_scene load_steps=2 format=3 uid="uid://hud_ui_001"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="LowHealthVignette" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.6, 0.0, 0.0, 0.3)

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 90.0
theme_override_styles/background = null
theme_override_styles/fill = null
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthIcon" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 35.0
offset_right = 50.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 18
text = "HP"
